--- a/_posts/R/2020-12-30-analyzing-covid19-in-usa/analyzing-covid19-in-usa.Rmd
+++ b/_posts/R/2020-12-30-analyzing-covid19-in-usa/analyzing-covid19-in-usa.Rmd
@@ -11,6 +11,7 @@ output:
     self_contained: false
 categories:
   - ggplot2
+# preview: images/sharpe-ratio.png
 ---
 
 ```{r set-params, include=FALSE}
