--- a/_posts/R/2020-12-30-analyzing-covid19-in-usa/analyzing-covid19-in-usa.Rmd
+++ b/_posts/R/2020-12-30-analyzing-covid19-in-usa/analyzing-covid19-in-usa.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Analyzing COVID19 in USA"
 description: |
-  A short description of the post.
+  Analyzing Covid 19 reports
 author:
   - name: Nora Jones
     url: https://example.com/norajones
