--- a/_posts/R/2020-12-30-analyzing-covid19-in-usa/analyzing-covid19-in-usa.Rmd
+++ b/_posts/R/2020-12-30-analyzing-covid19-in-usa/analyzing-covid19-in-usa.Rmd
@@ -12,10 +12,11 @@ output:
     self_contained: false
 packages: [ggplot2, forcats]
 categories: [Visualization, Modeling]
-tech: [R, SqL, Python]
+tech: [SqL, Python, Julia]
 # preview: images/sharpe-ratio.png
 bibliography: bibliography.bib
 draft: false
+# slug: ???
 ---
 
 ```{r, include=FALSE}
