--- a/_posts/R/2020-12-30-analyzing-covid19-in-usa/analyzing-covid19-in-usa.Rmd
+++ b/_posts/R/2020-12-30-analyzing-covid19-in-usa/analyzing-covid19-in-usa.Rmd
@@ -56,6 +56,16 @@ starwars %>%
 :::
 
 ::: {.panel}
+#### 🟢 Cleaning
+```{r, eval = F, echo = T}
+starwars %>%
+  filter(!is.na(species)) %>%
+  mutate(species = fct_lump(species, n = 3)) %>%
+  count(species)
+```
+:::
+
+::: {.panel}
 #### 🟠 Modeling
 :::
 
