--- a/_posts/2020-12-30-analyzing-covid19-in-usa/analyzing-covid19-in-usa.Rmd
+++ b/_posts/2020-12-30-analyzing-covid19-in-usa/analyzing-covid19-in-usa.Rmd
@@ -7,7 +7,7 @@ author:
     url: https://example.com/norajones
 # preview: https://www.jfkairport.com/static/JFK/image/jfk_taxi_new.jpg
 date: 2021-01-12
-tech: [Python]
+tech: [Sql]
 packages: [Matplotlib]
 categories: [Visualization]
 output:
